﻿v.2.0.2
 - Fixed a problem where generic method declarations didn't get their generic parameters renamed with the full minifier.
 - Fixed a problem where the full minifier did not rename catch clause variables
 
v.2.0.1
 - Simplified how project properties are defined and used as their complexity was unnecessary.
 - Restore now checks the other packages for updates as well.

v.2.0.0
 - Official release of MDK2 (Programmable Block Edition)

v.2.0.0-alpha073
 - Minifiers Ahoy! (the two last major minifier components are now in place)

v.2.0.0-alpha072
 - Fixed a bug where references to sub-namespaces would cause compile errors. 

v.2.0.0-alpha061
 - Fixed warning about unusable minifier

v.2.0.0-alpha060
 - Wrong / confusing error message for a part of the minifier that isn't finished yet
  
v.2.0.0-alpha059
 - Fixed type trimmer removing types it shouldn't have, and vice versa.
  
v.2.0.0-alpha058
 - Fixed minifier specification being wrongly named in the package arguments (minifier instead of minify).

v.2.0.0-alpha057
 - Fixed minifier specification being wrongly named in the MDK2 command line (minifier instead of minify).

v.2.0.0-alpha056
 - Added the type trimmer minifier level to the MDK2 command line.
 - Added the comment removal minifier level to the MDK2 command line.

v.2.0.0-alpha054
 - Fixed an issue where the mdk2 .ini file ignores were made with ; as a separator rather than ,.

v.2.0.0-alpha052
 - Added a warning if the final composed script exceeds the maximum allowed character count of the programmable block.

v.2.0.0-alpha051
 - Final structure (I think) for MDK2 command line.
 - Now notifying when new nuget packages are available (currently just Mal.MDK2.PbPackager).
 - Changed to an .ini based configuration rather than an msbuild based one.
 - Added an auto-migrator to add MDK2 support to MDK1 projects.

v.2.0.0-alpha1
 - Emergency publish of a very early build due to the problems with MDK1 and the new version of Visual Studio 2022.