@@ -28,6 +28,8 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "PbScript", "ScriptTemplates
 EndProject
 Project("{D954291E-2A0B-460D-934E-DC6B0785DB48}") = "PbMixin", "ScriptTemplates\content\1_Mixin\PbMixin.shproj", "{8A3CDCC5-4B55-4D87-A415-698A0E1FF06F}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Mdk.PbPackager", "Mdk.PbPackager\Mdk.PbPackager.csproj", "{15218DAA-FFF4-4E20-A21B-0A8347E27833}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Release|x64 = Release|x64
@@ -70,6 +72,10 @@ Global
 		{4FE6DB07-8C36-46FB-ADC2-EE29EB0448B7}.Release|x64.Build.0 = Release|x64
 		{4FE6DB07-8C36-46FB-ADC2-EE29EB0448B7}.Debug|x64.ActiveCfg = Debug|x64
 		{4FE6DB07-8C36-46FB-ADC2-EE29EB0448B7}.Debug|x64.Build.0 = Debug|x64
+		{15218DAA-FFF4-4E20-A21B-0A8347E27833}.Release|x64.ActiveCfg = Release|Any CPU
+		{15218DAA-FFF4-4E20-A21B-0A8347E27833}.Release|x64.Build.0 = Release|Any CPU
+		{15218DAA-FFF4-4E20-A21B-0A8347E27833}.Debug|x64.ActiveCfg = Debug|Any CPU
+		{15218DAA-FFF4-4E20-A21B-0A8347E27833}.Debug|x64.Build.0 = Debug|Any CPU
 	EndGlobalSection
 	GlobalSection(NestedProjects) = preSolution
 		{8A3CDCC5-4B55-4D87-A415-698A0E1FF06F} = {8EAA4661-9512-40CE-AA5D-E0CEFB85AE64}
